--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-    <title>ToDoApp</title>
+    <title>>ToDo-List-App</title>
   </head>
   <body>
     <div id="root"></div>
